--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.27.0",
     "@radix-ui/react-avatar": "^1.1.4",
+    "@radix-ui/react-select": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.0",
     "@tailwindcss/vite": "^4.1.3",
     "@tanstack/react-query": "^5.73.3",
@@ -21,6 +22,7 @@
     "lucide-react": "^0.487.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.55.0",
     "react-router-dom": "^7.5.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.3",
