Added clerk auth

--- a/apps/server/.env.sample
+++ b/apps/server/.env.sample
@@ -1,4 +1,6 @@
 PORT=8000
 NODE_ENV=development
-MONGO_URI=mongodb://localhost:27017/threatiq
-GORQ_KEY=your-groq-key
+MONGO_URI=
+CLERK_SECRET_KEY=
+CLERK_PUBLISHABLE_KEY=
+CLERK_ISSUER=
