--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -14,6 +14,8 @@
   "license": "ISC",
   "packageManager": "pnpm@10.7.0",
   "dependencies": {
+    "@clerk/backend": "^1.28.0",
+    "axios": "^1.8.4",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
