--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -14,6 +14,8 @@
   "license": "ISC",
   "packageManager": "pnpm@10.7.0",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.787.0",
+    "@aws-sdk/s3-request-presigner": "^3.787.0",
     "@clerk/backend": "^1.28.0",
     "axios": "^1.8.4",
     "cors": "^2.8.5",
