--- a/apps/client/.env.sample
+++ b/apps/client/.env.sample
@@ -1,2 +1,3 @@
 VITE_SERVER_URL=http://localhost:8000
 VITE_CLERK_PUBLISHABLE_KEY=pk_test_c3RpcnJlZC1jcmFiLTcuY2xlcmsuYWNjb3VudHMuZGV2JA
+VITE_NOVU_APPLICATION_IDENTIFER=
