--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -24,6 +24,7 @@
     "express": "^5.1.0",
     "groq-sdk": "^0.19.0",
     "mongoose": "^8.13.2",
+    "socket.io": "^4.8.1",
     "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
